Sistemato err plugin già inizializzato e num accessi null

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,7 @@ commands:
   psk:
     description: Magic word to get not banned
     usage: /<command> <password>
-    aliases: [login,password]
+    aliases: [login]
   foreignsentry:
     description: General purpose, ancora da implementare i sotto comandi
     usage: /fk reset
