--- a/config.yml
+++ b/config.yml
@@ -6,3 +6,5 @@ password: YEET
 # Vuoi eseguire l' ip-ban su chi non inserisce la password in tempo
 # o la inserisce sbagliata?
 RealBan: false
+# Quanti secondi dedicarare prima di eseguire kick/ban
+secondiAutenticazione: 10
